[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/HUD.gd" type="Script" id=1]
[ext_resource path="res://Fonts/good_times_rg.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 64
font_data = ExtResource( 2 )

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="GameScore" type="Label" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 1 )
text = "0"

[node name="StartButton" type="Button" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -70.0
margin_top = -150.0
margin_right = 70.0
margin_bottom = -70.0
custom_fonts/font = SubResource( 2 )
text = "Start!"

[node name="StartLabel" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -217.0
margin_top = -38.5
margin_right = 217.0
margin_bottom = 38.5
custom_fonts/font = SubResource( 3 )
text = "P1ng-P0ng"
align = 1

[node name="OverButton" type="Button" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -70.0
margin_top = -150.0
margin_right = 70.0
margin_bottom = -70.0
custom_fonts/font = SubResource( 2 )
text = "Restart"

[node name="OverLabel" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -237.5
margin_top = -38.5
margin_right = 237.5
margin_bottom = 38.5
custom_fonts/font = SubResource( 3 )
text = "you tried..."
align = 1
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="OverButton" to="." method="_on_OverButton_pressed"]
